<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDef">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/teads_video"
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_video"/>


        <TextView
            android:id="@+id/inread_parent"
            style="@style/TextSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/format_inread"/>

        <Button
            android:id="@+id/inread_scrollview"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/container_scrollview"/>

        <Button
            android:id="@+id/inread_recyclerview"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text="@string/container_recyclerview"/>

        <Button
            android:id="@+id/inread_webview"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text="@string/container_webview"/>


        <TextView
            android:id="@+id/custom_parent"
            style="@style/TextSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/format_custom_ad"/>

        <Button
            android:id="@+id/custom_scrollview"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/container_scrollview"/>

        <Button
            android:id="@+id/custom_recyclerview"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/container_recyclerview"/>

        <Button
            android:id="@+id/custom_webview"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/container_webview"/>

        <TextView
            android:id="@+id/settings"
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_settings"/>

        <TextView
            android:id="@+id/action_pid"
            style="@style/TextSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="@string/action_pid"/>

        <TextView
            android:id="@+id/action_webviewurl"
            style="@style/TextSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="@string/action_webviewurl"/>

    </LinearLayout>


</ScrollView>